feat: back - add validation to chat gateway

--- a/apps/chat-app/src/app/components/chat/chat.component.html
+++ b/apps/chat-app/src/app/components/chat/chat.component.html
@@ -1,5 +1,8 @@
 <div>
-  <p *ngFor="let message of messages">{{ message }}</p>
+  <div *ngFor="let message of messages">
+    <p>{{ message.user.username }}</p>
+    <p>{{ message.messageText }}</p>
+  </div>
   <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
     <input ngModel type="text" name="message" required />
     <button [disabled]="!form.valid" type="submit">Send message</button>
