feat: front - add users

--- a/apps/chat-app/src/app/components/chat/chat.component.html
+++ b/apps/chat-app/src/app/components/chat/chat.component.html
@@ -1,1 +1,8 @@
-<chat-app-messages></chat-app-messages>
+<div class="container">
+  <div class="users">
+    <chat-app-users></chat-app-users>
+  </div>
+  <div class="messages">
+    <chat-app-messages></chat-app-messages>
+  </div>
+</div>
