--- a/apps/chat-app/src/app/components/chat/messages/messages.component.scss
+++ b/apps/chat-app/src/app/components/chat/messages/messages.component.scss
@@ -1,15 +1,13 @@
 .container {
-  width: 100%;
-  height: 100vh;
+  height: 100%;
   .messages {
     background-color: rgb(8, 8, 22);
-    width: 100%;
-    height: 90vh;
+    height: calc(100vh - 100px);
     overflow: scroll;
     display: flex;
     flex-direction: column;
     .message {
-      background-color: rgb(20, 56, 162);
+      // background-color: rgb(20, 56, 162);
       width: fit-content;
       min-width: 150px;
       max-width: 300px;
@@ -39,6 +37,7 @@
     width: 100%;
     color: white;
     display: flex;
+    height: 100px;
     .message-textarea {
       width: 100%;
       background-color: rgb(9, 9, 38);
