--- a/apps/chat-app/src/app/components/chat/chat.component.scss
+++ b/apps/chat-app/src/app/components/chat/chat.component.scss
@@ -1,10 +1,11 @@
 .container {
   display: flex;
   width: 100wh;
+  overflow: hidden;
   .users {
-    flex: 1 1 20%;
+    flex: 1 1 auto;
   }
   .messages {
-    flex: 2 1 80%;
+    flex: 2 1 100%;
   }
 }
