--- a/apps/chat-app/src/app/components/chat/messages/messages.component.scss
+++ b/apps/chat-app/src/app/components/chat/messages/messages.component.scss
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     .message {
-      // background-color: rgb(20, 56, 162);
       width: fit-content;
       min-width: 150px;
       max-width: 300px;
@@ -38,9 +37,9 @@
     color: white;
     display: flex;
     height: 100px;
+    background-color: rgb(9, 9, 38);
     .message-textarea {
       width: 100%;
-      background-color: rgb(9, 9, 38);
       resize: none;
       textarea {
         width: 95%;
@@ -49,15 +48,23 @@
           color: white;
         }
       }
-      button {
-        width: 40px;
-        height: 40px;
-        background-color: rgba(255, 255, 255, 0);
-        color: rgb(0, 110, 255);
-        padding: 0;
-        border: none;
-        background: none;
-        cursor: pointer;
+    }
+    button {
+      color: rgb(0, 110, 255);
+      padding: 20px;
+      border: none;
+      background: none;
+      cursor: pointer;
+      align-self: center;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .container {
+    .messages {
+      .message {
+        max-width: 200px;
       }
     }
   }
