--- a/apps/chat-app/src/app/components/chat/users/users.component.scss
+++ b/apps/chat-app/src/app/components/chat/users/users.component.scss
@@ -1,13 +1,11 @@
 .container {
   background-color: rgb(24, 26, 42);
-//   color: white;
   height: 100vh;
   overflow: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
   .user {
-    // background-color: rgb(36, 36, 64);
     color: white;
     width: 200px;
     height: 40px;
@@ -43,5 +41,33 @@
     &::before {
       background-color: rgb(0, 197, 0);
     }
+  }
+}
+.drawer-container {
+  height: 100vh;
+}
+
+.drawer-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: rgba(42, 46, 72, 0.54);
+  color: white;
+}
+
+.mobile {
+  display: none;
+}
+
+.desktop {
+  display: block;
+}
+
+@media (max-width: 720px) {
+  .mobile {
+    display: block;
+  }
+  .desktop {
+    display: none;
   }
 }
