fix: front - change button color on auth page

--- a/apps/chat-app/src/app/pages/auth/auth.component.scss
+++ b/apps/chat-app/src/app/pages/auth/auth.component.scss
@@ -48,7 +48,8 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          background-color: yellow;
+          background-color: rgb(9, 9, 38);
+          color: white;
         }
         .ng-invalid.ng-touched:not(form) {
           border: 2px solid #ff0400;
