fix: minor fixes

--- a/apps/chat-app/src/app/pages/chat/messages/messages.component.html
+++ b/apps/chat-app/src/app/pages/chat/messages/messages.component.html
@@ -12,7 +12,7 @@
       <p>{{ message.messageText }}</p>
       <div class="date">
         {{ message.createdAt | date }}
-        {{ message.createdAt | date: 'h:mm' }}
+        {{ message.createdAt | date: 'HH:mm' }}
       </div>
     </div>
   </div>
