--- a/apps/chat-app/src/app/pages/chat/users/users.component.html
+++ b/apps/chat-app/src/app/pages/chat/users/users.component.html
@@ -1,57 +1,61 @@
-
-  <ng-template #usersRef>
-    <div class="container">
-      <div
-        *ngFor="let user of users$ | async"
-        [ngClass]="
-          (!isAdmin && 'user online') || user.online
-            ? 'user online'
-            : 'user offline'
-        "
-        [ngStyle]="{
-          'background-color': user.color,
-          border:
-            (authUserStore.authUser$ | async)?.id === user.id
-              ? '1px solid yellow'
-              : ''
-        }"
-      >
-        <p>
-          {{ user.username }}
-        </p>
-        <div [ngStyle]="{ cursor: isAdmin ? 'pointer' : 'initial' }">
-          <mat-icon (click)="unmuteUser(user.id)" *ngIf="user.muted"
-            >volume_off</mat-icon
-          >
-          <mat-icon (click)="muteUser(user.id)" *ngIf="!user.muted"
-            >volume_up</mat-icon
-          >
-          <mat-icon (click)="banUser(user.id)" *ngIf="!user.banned"
-            >how_to_reg</mat-icon
-          >
-          <mat-icon (click)="unbanUser(user.id)" *ngIf="user.banned"
-            >report_off</mat-icon
-          >
-        </div>
+<ng-template #usersRef>
+  <div class="container">
+    <div
+      *ngFor="let user of users$ | async"
+      [ngClass]="
+        (!isAdmin && 'user online') || user.online
+          ? 'user online'
+          : 'user offline'
+      "
+      [ngStyle]="{
+        'background-color': user.color,
+        border:
+          (authUserStore.authUser$ | async)?.id === user.id
+            ? '1px solid yellow'
+            : ''
+      }"
+    >
+      <p>
+        {{ user.username }}
+      </p>
+      <div [ngStyle]="{ cursor: isAdmin ? 'pointer' : 'initial' }">
+        <mat-icon (click)="unmuteUser(user.id)" *ngIf="user.muted"
+          >volume_off</mat-icon
+        >
+        <mat-icon (click)="muteUser(user.id)" *ngIf="!user.muted"
+          >volume_up</mat-icon
+        >
+        <mat-icon (click)="banUser(user.id)" *ngIf="!user.banned"
+          >how_to_reg</mat-icon
+        >
+        <mat-icon (click)="unbanUser(user.id)" *ngIf="user.banned"
+          >report_off</mat-icon
+        >
       </div>
     </div>
-  </ng-template>
-
-
+  </div>
+</ng-template>
 
 <div class="desktop">
-  <ng-template [ngTemplateOutlet]="usersRef" ></ng-template>
+  <ng-template [ngTemplateOutlet]="usersRef"></ng-template>
 </div>
-
 
 <div class="mobile">
   <mat-drawer-container class="drawer-container" autosize>
     <mat-drawer #drawer class="drawer-sidenav" mode="side">
-      <ng-template [ngTemplateOutlet]="usersRef" ></ng-template>
+      <ng-template [ngTemplateOutlet]="usersRef"></ng-template>
     </mat-drawer>
   </mat-drawer-container>
-
-  <button class="drawer-button" type="button" mat-button (click)="drawer.toggle()">
-   Users
+  <button
+    class="drawer-button"
+    type="button"
+    mat-button
+    (click)="drawer.toggle()"
+  >
+    Users
   </button>
 </div>
+
+<button class="logout-button" type="button" mat-button (click)="logOut()">
+  Log out
+</button>
