--- a/apps/chat-app/src/app/pages/chat/users/users.component.html
+++ b/apps/chat-app/src/app/pages/chat/users/users.component.html
@@ -9,28 +9,35 @@
       "
       [ngStyle]="{
         'background-color': user.color,
-        border:
-          (authUserStore.authUser$ | async)?.id === user.id
-            ? '1px solid yellow'
-            : ''
+        border: authUserId === user.id ? '1px solid yellow' : ''
       }"
     >
       <p>
         {{ user.username }}
       </p>
-      <div [ngStyle]="{ cursor: isAdmin ? 'pointer' : 'initial' }">
+
+      <div *ngIf="isAdmin" [ngStyle]="{ cursor: 'pointer' }">
         <mat-icon (click)="unmuteUser(user.id)" *ngIf="user.muted"
           >volume_off</mat-icon
         >
         <mat-icon (click)="muteUser(user.id)" *ngIf="!user.muted"
           >volume_up</mat-icon
         >
-        <mat-icon (click)="banUser(user.id)" *ngIf="!user.banned"
+        <mat-icon
+          (click)="banUser(user.id)"
+          *ngIf="!user.banned && user.id !== authUserId"
           >how_to_reg</mat-icon
         >
-        <mat-icon (click)="unbanUser(user.id)" *ngIf="user.banned"
+        <mat-icon
+          (click)="unbanUser(user.id)"
+          *ngIf="user.banned && user.id !== authUserId"
           >report_off</mat-icon
         >
+      </div>
+
+      <div *ngIf="!isAdmin">
+        <mat-icon *ngIf="user.muted">volume_off</mat-icon>
+        <mat-icon *ngIf="!user.muted">volume_up</mat-icon>
       </div>
     </div>
   </div>
